[package]
name = "littlefs-sys"
version = "0.1.0"
authors = ["Brandon Edens <brandonedens@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"
categories = ["embedded", "filesystem", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/brandonedens/rust-littlefs"

[dependencies]
cty = "0.1.5"

[build-dependencies]
bindgen = "0.43.1"
cc = "1.0.25"
