[package]
name = "littlefs"
version = "0.1.0"
authors = ["Brandon Edens <brandonedens@gmail.com>"]
edition = "2018"
categories = ["embedded", "filesystem", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/brandonedens/rust-littlefs"

[dependencies]
littlefs-sys = { version = "0.1", path = "../littlefs-sys" }
bitflags = "1.0.4"
cty = "0.1.5"
